--- a/index.html
+++ b/index.html
@@ -6,13 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sports demand</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section>
-        <div>
-            <h1>welcomw to</h1>
-            <h1>sports demand!</h1>
+        <div class="half-width">
+            <h1>welcome to</h1>
+            <h1> <span class="orange-color">sports</span> demand!</h1>
+            <h3>this website is made for business purpose</h3>
+            <p>if you are fashionate with jarsy and trouse then this website will be perfect place for you.if you are
+                with our rules then please you can see our product design.our product is the best quality maintain for
+                people all over again .our defferent some item of product in below.
+            <ol>
+                <li><span class="or">trouser</span></li>
+                <li><span class="or">perasuit trouser</span> </li>
+                <li><span class="or">shorts</span></li>
+            </ol>
+            </p>
+            <a class="link-button" target="_blank"
+                href="https://www.facebook.com/Sports-Demand-101695411755467/photos/?ref=page_internal">order now</a>
+        </div>
+        <div class="half-width">
+            <img src="jarsy.jpg" alt="">
         </div>
     </section>
 </body>
