--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner flexible-area">
         <div class="half-width">
             <h1>welcome to</h1>
             <h1> <span class="orange-color">sports</span> demand!</h1>
@@ -32,6 +32,40 @@
         </div>
         <div class="half-width">
             <img src="jarsy.jpg" alt="">
+        </div>
+    </section>
+    <section class="flexible-area">
+        <div class="half-width">
+            <img src="red-jarsy.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Red Adidas Jarsy</h2>
+                <h2><span class="or">information about this product:</span></h2>
+                <p>this product is very high quality product .this product fabrics is <strong>chaina fabrics</strong>
+                    so can bye intensonally .also this product size M,L,XL.you can order our website then we are
+                    recieving
+                    your order we send to your adress in curier sevice .on thing important to you curier cost providing
+                    by
+                    you.this product price is 350 TK only .so hurry up ! we are waiting for your respons</p>
+                <a class="link-button" target="_blank"
+                    href="https://www.facebook.com/Sports-Demand-101695411755467/photos/?ref=page_internal">ADD TO
+                    CURT</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h1>ADDRESS:</h1>
+        <div class="flexible-area">
+            <div id="full-star" class="experience-item">
+                <h1 class="or">online address</h1>
+                <p>facebook/sportsdemand</p>
+                <p>email:fiazullah.noa2014@gmail.com</p>
+            </div>
+            <div id="web-dev-ex" class="experience-item">
+                <h1 class="or">ofline adress</h1>
+                <p>chaprashir hat,companiganj,noakhali</p>
+                <p>phone:01629207400</p>
+                <p>shop no:420,super market</p>
+            </div>
         </div>
     </section>
 </body>
